# swe-bench-purple-agent

./: .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
config/: swebench.yaml
src/: agent.py  executor.py  messenger.py  run_mini_swe_agent.py  server.py
tests/: test_agent.py  test_runner.py
